--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,14 @@
-spring.datasource.url= jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=rmxxxxx
-spring.datasource.password=xxxxxx
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.datasource.url= jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.url=jdbc:h2:mem:emi
+
+# spring.datasource.username=rmxxxxx
+# spring.datasource.password=xxxxxx
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 server.error.include-stacktrace=never
 
 springdoc.swagger-ui.path=/docs
 
 
+
 #hibernate configs
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto= update
-
-
-#Criação de script create.sql, após a criação do banco de dados comentar as linha abaixo
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=drop-and-create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.drop-target=drop.sql
+# spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
