--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@
 # spring.datasource.password=xxxxxx
 # spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.datasource.url=jdbc:h2:mem:emi
+
 
 server.error.include-stacktrace=never
 
 springdoc.swagger-ui.path=/docs
 
+jwt.secret=)t~'L-TCUFwz&,}+gX'q#QHb-IoaLqm8%.{5@3f04nA%D')
 
+spring.datasource.url=jdbc:h2:mem:emi
 
