--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-# spring.datasource.url= jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-# spring.datasource.username=rmxxxxx
-# spring.datasource.password=xxxxxx
-# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-# spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-jwt.secret=)t~'L-TCUFwz&,}+gX'q#QHb-IoaLqm8%.{5@3f04nA%D')
-
-server.error.include-stacktrace=never
-
 springdoc.swagger-ui.path=/docs
 
-spring.datasource.url=jdbc:h2:mem:emi
+server.error.include-stacktrace = never
 
+# spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev}
+spring.profiles.active=dev
+
+jwt.secret=)t~'L-TCUFwz&,}+gX'q#QHb-IoaLqm8%.{5@3f04nA%D')
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
