admin client add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ jwt.secret=)t~'L-TCUFwz&,}+gX'q#QHb-IoaLqm8%.{5@3f04nA%D')
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
+
+spring.boot.admin.client.url=wb-admin-emi-sprint.azurewebsites.net
