--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ jwt.secret=)t~'L-TCUFwz&,}+gX'q#QHb-IoaLqm8%.{5@3f04nA%D')
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
 
-spring.boot.admin.client.url=wb-admin-emi-sprint.azurewebsites.net
+spring.boot.admin.client.url=https://wb-admin-emi-sprint.azurewebsites.net
