--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,25 @@
 #Documentação da API com Swagger
 springdoc.swagger-ui.path=/docs
+
+#Projeto admin do spring boot
+spring.boot.admin.client.url=http://localhost:9090
+
 #Tratamento de erro
 server.error.include-stacktrace = never
+
 #Configuração de perfil de execução
-# spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev}
+# perfil dev ou prod
 spring.profiles.active=dev
+
 #JWT secret
 jwt.secret=)t~'L-TCUFwz&,}+gX'q#QHb-IoaLqm8%.{5@3f04nA%D')
+
 #Exposição de endpoints do actuator e detalhes da saúde
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
-#Projeto admin do spring boot
-# spring.boot.admin.client.url=https://wb-admin-emi-sprint.azurewebsites.net
-spring.boot.admin.client.url=http://localhost:9090
+
 #Configuração do banco de dados
-spring.datasource.url=jdbc:sqlserver://sqlserver-emi.database.windows.net:1433;database=emidb;user=admsprint@sqlserver-emi;password=sprintemi@2024;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-# insira o usuário e senha do banco de dados
-spring.datasource.username=admsprint@sqlserver-emi
-spring.datasource.password=sprintemi@2024
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/emi
+spring.datasource.username=emi
+spring.datasource.password=emi
+spring.mvc.hiddenmethod.filter.enabled=true
