--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,7 @@
 spring.jpa.show-sql = true
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+spring.security.oauth2.client.registration.github.client-id=Ov23liNcUXwW8lybpvxU
+spring.security.oauth2.client.registration.github.client-secret=74de6da8b2c76b0959629c6c2331c91618b5a965
