--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,16 +10,13 @@ pool:
   vmImage: windows-latest
 
 steps:
-- task: Maven@3
+- task: DockerCompose@0
+  displayName: Banco de dados com Docker Compose'
   inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    containerregistrytype: 'Container Registry'
+    dockerComposeFile: '**/docker-compose.yml'
+    action: 'Run services'
+    detached: true
 
 - task: Maven@4
   inputs:
@@ -34,10 +31,15 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-- task: DockerCompose@0
-  displayName: 'Iniciar banco de dados com Docker Compose'
+- task: Maven@3
   inputs:
-    containerregistrytype: 'Container Registry'
-    dockerComposeFile: '**/docker-compose.yml'
-    action: 'Run services'
-    detached: true
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.11'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    goals: 'package'
+
+
