--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
 
 #Configuração do banco de dados
-spring.datasource.url=jdbc:postgresql://db:5432/emi
+spring.datasource.url=jdbc:postgresql://localhost:5432/emi
 spring.datasource.username=emi
 spring.datasource.password=emi
 spring.mvc.hiddenmethod.filter.enabled=true
