--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,8 +3,8 @@ spring.jpa.show-sql = true
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-spring.security.oauth2.client.registration.github.client-id=Ov23liNcUXwW8lybpvxU
-spring.security.oauth2.client.registration.github.client-secret=74de6da8b2c76b0959629c6c2331c91618b5a965
+spring.security.oauth2.client.registration.github.client-id=${client_id}
+spring.security.oauth2.client.registration.github.client-secret=${secret_github}
 
-spring.security.oauth2.client.registration.google.client-id=1009476946544-u2j67q0grfr3oc7a5rf33enhrmqtmcav.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${client_id}
+spring.security.oauth2.client.registration.google.client-secret=${secret_google}
